--- a/about-our.html
+++ b/about-our.html
@@ -24,7 +24,7 @@
         <h1>Про нас</h1>       
         <h2 class="h2">Маленькі мрії та грандіозні плани</h2>
         <p class="text">ROZETKA − найбільший онлайн-ритейлер у країні. З 2005 року ми втілюємо маленькі мрії та грандіозні плани мільйонів людей. У нас можна знайти буквально все. Ми продаємо за справедливою ціною та надаємо гарантію, бо вважаємо, що онлайн-шопінг має бути максимально зручним і безпечним. І щоразу, коли хтось натискає «Купити», ми розуміємо, що робимо потрібну справу.</p>
-        <img class="image"  src="https://content2.rozetka.com.ua/files/images/original/187958715.gif"></img>
+        <div class="conteiner-image"><img class="image"  src="https://content2.rozetka.com.ua/files/images/original/187958715.gif"></img></div>
         <h2 class="h2">Наша мета − бути корисними</h2>
         <p class="text">Ми віримо, що речі існують для того, щоб робити життя простішим, приємнішим і добрішим. Тому й пошук тієї самої речі повинен бути швидким, зручним і приємним. Ми не просто продаємо побутову техніку, електроніку, прикраси або вино. Ми допомагаємо знайти саме те, що треба, в одному місці та без зайвих хвилювань, щоб ви не витрачали життя на пошуки, а просто жили щасливо. Rozetka − це універсальна відповідь на будь-який запит, початок пошуку та його кінцева зупинка, справжній помічник. Ми назавжди позбавляємо своїх покупців від неприємних компромісів, виконуємо бажання і даємо змогу мріяти сміливіше. Завдяки розумному пошуку та чесному сервісу ми робимо життя наших клієнтів трішки кращим просто зараз.</p>
         <h2 class="h2">Щастя починається з простих речей</h2>
@@ -40,7 +40,7 @@
                 <img class="img-logo" src="https://learn.logikaschool.com/uploads/student/4632546/67254a96a89d3.png">
             </a>
             <p class="logo"><b>ROZETKA</b></p>   
-            <div>
+            <div class="conteiner-buttom">
                 <a class="buttom" href="about-our.html">Про нас</a><br/>
                 <a class="buttom" href="qq.html">Умови використання сайту</a><br/>
             </div>                
