--- a/clothes.html
+++ b/clothes.html
@@ -60,7 +60,7 @@
             <img class="img-logo" src="https://learn.logikaschool.com/uploads/student/4632546/67254a96a89d3.png">
         </a>
         <p class="logo"><b>ROZETKA</b></p>   
-        <div>
+        <div class="conteiner-buttom">
             <a class="buttom" href="about-our.html">Про нас</a><br/>
             <a class="buttom" href="qq.html">Умови використання сайту</a><br/>
         </div>                
