--- a/qq.html
+++ b/qq.html
@@ -66,21 +66,19 @@
     <h1>Контакти</h1>
         <div class="con">
             <img src="https://learn.logikaschool.com/uploads/student/4632546/67013383d3df5.png" alt="">
-            Наш номер телефону:+380 99 472 48 49
-        </div>
-        <div class="con">
+            Наш номер телефону:+380 99 472 48 49<br/>
             <img src="https://learn.logikaschool.com/uploads/student/4632546/67139e4f33b16.png"> телеграм:@pandaOh
         </div>
-    <footer>  
-        <a href="index.html">
-            <img class="img-logo" src="https://learn.logikaschool.com/uploads/student/4632546/67254a96a89d3.png">
-        </a>
-        <p class="logo"><b>ROZETKA</b></p>   
-        <div>
-            <a class="buttom" href="about-our.html">Про нас</a><br/>
-            <a class="buttom" href="qq.html">Умови використання сайту</a><br/>
-        </div>                
-    </footer>
+        <footer>  
+            <a href="index.html">
+                <img class="img-logo" src="https://learn.logikaschool.com/uploads/student/4632546/67254a96a89d3.png">
+            </a>
+            <p class="logo"><b>ROZETKA</b></p>   
+            <div class="conteiner-buttom">
+                <a class="buttom" href="about-our.html">Про нас</a><br/>
+                <a class="buttom" href="qq.html">Умови використання сайту</a><br/>
+            </div>                
+        </footer>
 </nav>
 </body>
 </html>
